src/Components/Menu.css
menu {
  width: 100px;
  height: auto;
  background: #19162c;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
  position: sticky;
  top: 0;
}

menu .logo
{
  cursor: pointer;
  opacity: 1;
  transition: all 0.4s ease-in-out;
}

menu .logo:hover
{
  opacity: 0.7;
  transition: all 0.4s ease-in-out;
}

menu img {
  width: 3em;
  padding-top: 30px;
}

menu ul {
  padding-top: 30px;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

menu ul li {
  list-style: none;
  margin: 20px 0;
  position: relative;
  color: #8c8a95;
  width: 100%;
  text-align: center;
}

menu ul li a {
  font-size: 24px;
  color: #8c8a95;
  text-decoration: none;
  transition: all 0.3s;
  position: relative;
}

menu ul li a::before {
  position: absolute;
  content: "";
  top: 5px;
  left: -10px;
  width: 0px;
  height: 20px;
  background: #0db5cb;
  border-radius: 50%;
}

menu ul li:hover a::before {
  width: 20px;
  transition: all 0.3s;
}

menu ul li.active a::before {
  width: 20px;
  transition: all 0.3s;
}

menu ul li.active a {
  color: #0db5cb;
}

menu ul li:hover a {
  color: #0db5cb;
}

.tooltip {
  visibility: hidden;
  width: 80px;
  background-color: #2e2758;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 8px 8px;
  font-size: 15px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -30px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltip::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #231e42 transparent transparent transparent;
}

menu ul li:hover .tooltip {
  visibility: visible;
  opacity: 1;
}

.lastMenu {
  margin-top: auto;
}

@media only screen and (max-width: 525px) {
  menu {
    min-width: 68px;
    width: auto;
  }
  menu ul{
    display: none;
    position: relative;
    top: 50px;
    right: 0;
    width: 100%;
    background-color: #19162c;
    border-radius: 10px;
    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
  }
  menu img{
    position: absolute;
    left: 1px;
    padding: 0;
  }
  menu ul li{
    display: block;
    padding: 10px;
    border-bottom: 1px solid #eee;
  }
  .logo{
    cursor: pointer;
  }
}

